Prevent character wrapping in doc links

--- a/autogen/docs/styles/theme.css
+++ b/autogen/docs/styles/theme.css
@@ -198,6 +198,10 @@ a.code {
     font-family: var(--font-mono);
 }
 
+a.code {
+    white-space: nowrap;
+}
+
 /* HR */
 hr {
     color: var(--netlogo-black);
